learn page content

--- a/learn.html
+++ b/learn.html
@@ -122,43 +122,368 @@
         </section>
         <section class="section2 aboutTools" id="aboutTools">
             <a href="#aboutTools">
-                <h1>Agricultural Tools</h1>
+                <h1>Farm Tools and Equipment in Crop Production</h1>
             </a>
             <hr>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum.</p>
+            <p>Farm tools, implements, and equipment play very important role in crop production. 
+            Their availability makes the work much easier and faster. However, even if one may have 
+            the most sophisticated tools and implements, but does not know how to use them, they are useless. 
+            In order to do crop production successfully, one must have a good working knowledge of the tools, 
+            implements and equipment before using them. </p>
+        </section>
+        <!--Definition of Terms-->
+        <section class="section2 descTerms" id="deskTerms">
+            <a href="#deskTerms">
+                <h3>Definition of Terms</h3>
+            </a>
+            <hr>
+            <p>
+                <b>Tool</b> – Any device or implements used to carry out mechanical functions whether manually or by a machine. <br>
+                <b>Farm</b> – An area of land and its buildings used under one management for growing crops and rearing animals. <br>
+                <b>Hand Tools</b> – These are objects that are usually light and are used without the help of animals and machineries. <br>
+                <b>Farm Tools</b> – These are used in land preparations. <br>
+                <br>
+            </p>
+        </section>
+        <!--Content Break-->
+        <section class="section2 contentBreak" id="contentBreak">
+            <br>
+        </section>
+        <!--Hand Tools-->
+        <section class="section2 aboutHandTools" id="aboutHandTools">
+            <a href="#aboutHandTools">
+                <h3>Hand Tools</h3>
+            </a>
+            <hr>
+            <p>These are tools made of light materials and are used manually. 
+            Most of the hand tools are used in cultivating the area for small garden 
+            or in backyard gardening.</p>
         </section>
         <section class="section3 toolsContainer" id="toolsContainer">
+            <div class="aboutAxe">
+                <div class="row">
+                    <div class="unequalcolumn unequalcolumnleft">
+                        <img src="img/protosample/learntools/Axe.png" alt="test" class="logo"></img>
+                    </div>
+                    <div class="unequalcolumn unequalcolumnright">
+                        <a href="#toolAxe">
+                            <h1>Axe</h1>
+                        </a>
+                        <p>Axe is for cutting bigger size post.</p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="aboutCrowbar">
+                <div class="row">
+                    <div class="unequalcolumn unequalcolumnleft">
+                        <img src="img/protosample/learntools/Crowbar.png" alt="test" class="logo"></img>
+                    </div>
+                    <div class="unequalcolumn unequalcolumnright">
+                        <a href="#toolCrowbar">
+                            <h1>Crowbar</h1>
+                        </a>
+                        <p>Crowbar is used for digging big holes and for digging out big stones and stumps.</p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="aboutGrabHoe">
+                <div class="row">
+                    <div class="unequalcolumn unequalcolumnleft">
+                        <img src="img/protosample/learntools/GrabHoe.png" alt="test" class="logo"></img>
+                    </div>
+                    <div class="unequalcolumn unequalcolumnright">
+                        <a href="#toolGrabHoe">
+                            <h1>Grab Hoe</h1>
+                        </a>
+                        <p>Grab-hoe is used for breaking hard topsoil and pulverizing soil.</p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="aboutHandCultivator">
+                <div class="row">
+                    <div class="unequalcolumn unequalcolumnleft">
+                        <img src="img/protosample/learntools/HandCultivator.png" alt="test" class="logo"></img>
+                    </div>
+                    <div class="unequalcolumn unequalcolumnright">
+                        <a href="#toolHandCultivator">
+                            <h1>Hand Cultivator</h1>
+                        </a>
+                        <p>Hand cultivator is used for cultivating the garden plot by loosening the soil and removing weeds around the plant.</p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="aboutHandFork">
+                <div class="row">
+                    <div class="unequalcolumn unequalcolumnleft">
+                        <img src="img/protosample/learntools/HandFork.png" alt="test" class="logo"></img>
+                    </div>
+                    <div class="unequalcolumn unequalcolumnright">
+                        <a href="#toolHandFork">
+                            <h1>Hand Fork</h1>
+                        </a>
+                        <p>Hand fork is used for inter row cultivation.</p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="aboutHandTrowel">
+                <div class="row">
+                    <div class="unequalcolumn unequalcolumnleft">
+                        <img src="img/protosample/learntools/HandTrowel.png" alt="test" class="logo"></img>
+                    </div>
+                    <div class="unequalcolumn unequalcolumnright">
+                        <a href="#toolHandTrowel">
+                            <h1>Hand Trowel</h1>
+                        </a>
+                        <p>Hand Trowel is used for loosening the soil around the growing plants and putting small amount of manure fertilizer in the soil.</p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="aboutKnife">
+                <div class="row">
+                    <div class="unequalcolumn unequalcolumnleft">
+                        <img src="img/protosample/learntools/Knife.png" alt="test" class="logo"></img>
+                    </div>
+                    <div class="unequalcolumn unequalcolumnright">
+                        <a href="#toolKnife">
+                            <h1>Knife</h1>
+                        </a>
+                        <p>Knife is for cutting planting materials and for performing other operations in horticulture.</p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="aboutLightHoe">
+                <div class="row">
+                    <div class="unequalcolumn unequalcolumnleft">
+                        <img src="img/protosample/learntools/LightHoe.png" alt="test" class="logo"></img>
+                    </div>
+                    <div class="unequalcolumn unequalcolumnright">
+                        <a href="#toolLightHoe">
+                            <h1>Light Hoe</h1>
+                        </a>
+                        <p>Light hoe is used for loosening and leveling soil and digging out furrows for planting.</p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="aboutPickMattock">
+                <div class="row">
+                    <div class="unequalcolumn unequalcolumnleft">
+                        <img src="img/protosample/learntools/PickMattock.png" alt="test" class="logo"></img>
+                    </div>
+                    <div class="unequalcolumn unequalcolumnright">
+                        <a href="#toolPickMattock">
+                            <h1>Pick Mattock</h1>
+                        </a>
+                        <p>Pick-mattock is used for digging canals breaking hard topsoil and for digging up stones and tree stumps.</p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="aboutPruningShears">
+                <div class="row">
+                    <div class="unequalcolumn unequalcolumnleft">
+                        <img src="img/protosample/learntools/PruningShears.png" alt="test" class="logo"></img>
+                    </div>
+                    <div class="unequalcolumn unequalcolumnright">
+                        <a href="#toolPruningShears">
+                            <h1>Pruning Shears</h1>
+                        </a>
+                        <p>Pruning shears is for cutting branches of planting materials and unnecessary branches of plants.</p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="aboutRake">
+                <div class="row">
+                    <div class="unequalcolumn unequalcolumnleft">
+                        <img src="img/protosample/learntools/Rake.png" alt="test" class="logo"></img>
+                    </div>
+                    <div class="unequalcolumn unequalcolumnright">
+                        <a href="#toolRake">
+                            <h1>Rake</h1>
+                        </a>
+                        <p>Rake is used for cleaning ground and leveling topsoil.</p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="aboutShovel">
+                <div class="row">
+                    <div class="unequalcolumn unequalcolumnleft">
+                        <img src="img/protosample/learntools/Shovel.png" alt="test" class="logo"></img>
+                    </div>
+                    <div class="unequalcolumn unequalcolumnright">
+                        <a href="#toolShovel">
+                            <h1>Shovel</h1>
+                        </a>
+                        <p>Shovel is used in removing trash, digging loose soil, moving soil from one place to another and for mixing soil media.</p>
+                    </div>
+                </div>
+            </div>
+            <hr>
             <div class="aboutSickle">
                 <div class="row">
                     <div class="unequalcolumn unequalcolumnleft">
-                        <img src="img/protosample/favicon.png" alt="test" class="logo"></img>
+                        <img src="img/protosample/learntools/Sickle.png" alt="test" class="logo"></img>
                     </div>
                     <div class="unequalcolumn unequalcolumnright">
                         <a href="#toolSickle">
                             <h1>Sickle</h1>
                         </a>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <p>Sickle is a hand-held agricultural tool with a variously curved blade typically .</p>
                     </div>
                 </div>
             </div>
             <hr>
-            <div class="aboutPick">
+            <div class="aboutSpade">
                 <div class="row">
                     <div class="unequalcolumn unequalcolumnleft">
-                        <img src="img/protosample/favicon.png" alt="test" class="logo"></img>
+                        <img src="img/protosample/learntools/Spade.png" alt="test" class="logo"></img>
                     </div>
                     <div class="unequalcolumn unequalcolumnright">
-                        <a href="#toolPick">
-                            <h1>Pickaxe</h1>
+                        <a href="#toolSpade">
+                            <h1>Spade</h1>
                         </a>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <p>Spade is used for removing trash or soil, digging canals or ditches, and mixing soil media.</p>
                     </div>
                 </div>
             </div>
+            <hr>
+            <div class="aboutSpadingFork">
+                <div class="row">
+                    <div class="unequalcolumn unequalcolumnleft">
+                        <img src="img/protosample/learntools/SpadingFork.png" alt="test" class="logo"></img>
+                    </div>
+                    <div class="unequalcolumn unequalcolumnright">
+                        <a href="#toolSpadingFork">
+                            <h1>Spading Fork</h1>
+                        </a>
+                        <p>Spading Fork is used for loosening the soil, digging out crops and turning over the materials in a compost heap.</p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="aboutSprayers">
+                <div class="row">
+                    <div class="unequalcolumn unequalcolumnleft">
+                        <img src="img/protosample/learntools/Sprayers.png" alt="test" class="logo"></img>
+                    </div>
+                    <div class="unequalcolumn unequalcolumnright">
+                        <a href="#toolSprayers">
+                            <h1>Sprayers</h1>
+                        </a>
+                        <p>Sprayers is a hand-held agricultural tool with a variously curved blade typically used for cutting weeds.</p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="aboutSprinklers">
+                <div class="row">
+                    <div class="unequalcolumn unequalcolumnleft">
+                        <img src="img/protosample/learntools/Sprinklers.jpg" alt="test" class="logo"></img>
+                    </div>
+                    <div class="unequalcolumn unequalcolumnright">
+                        <a href="#toolSprinklers">
+                            <h1>Sprinklers</h1>
+                        </a>
+                        <p>Springklers are used for watering seedlings and young plants.</p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="aboutWaterPails">
+                <div class="row">
+                    <div class="unequalcolumn unequalcolumnleft">
+                        <img src="img/protosample/learntools/WaterPails.png" alt="test" class="logo"></img>
+                    </div>
+                    <div class="unequalcolumn unequalcolumnright">
+                        <a href="#toolWaterPails">
+                            <h1>Water Pails</h1>
+                        </a>
+                        <p>Water pails are used for hauling water, manure and fetilizers.</p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="aboutWheelBarrow">
+                <div class="row">
+                    <div class="unequalcolumn unequalcolumnleft">
+                        <img src="img/protosample/learntools/WheelBarrow.png" alt="test" class="logo"></img>
+                    </div>
+                    <div class="unequalcolumn unequalcolumnright">
+                        <a href="#toolWheelBarrow">
+                            <h1>Wheel Barrow</h1>
+                        </a>
+                        <p>Wheel barrows are used for carrying heavy loads of dirt, rocks, etc.</p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+        </section>
+        <!--Content Break-->
+        <section class="section2 contentBreak" id="contentBreak">
+            <br>
+        </section>
+        <!--Common Farm Equipments-->
+        <section class="section2 aboutFarmEq" id="aboutFarmEq">
+            <a href="#aboutFarmEq">
+                <h3>Common Farm Equipments</h3>
+            </a>
+            <hr>
+            <p>These are machineries used in horticultural operations especially in vegetable production.
+            They are used in land preparation and in transporting farm inputs and products. 
+            This equipment needs a highly skilled operator to use.</p>
+        </section>
+        <section class="section3 toolsContainer" id="toolsContainer">
+            <div class="aboutFourWheelTractor">
+                <div class="row">
+                    <div class="unequalcolumn unequalcolumnleft">
+                        <img src="img/protosample/learntools/2FourWheelTractor.png" alt="test" class="logo"></img>
+                    </div>
+                    <div class="unequalcolumn unequalcolumnright">
+                        <a href="#toolFourWheelTractor">
+                            <h1>Four Wheel Tractor</h1>
+                        </a>
+                        <p>Four-wheel tractor is used to pull disc plow and disc harrow in preparing much bigger area of land.</p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="aboutHandTractor">
+                <div class="row">
+                    <div class="unequalcolumn unequalcolumnleft">
+                        <img src="img/protosample/learntools/2HandTractor.png" alt="test" class="logo"></img>
+                    </div>
+                    <div class="unequalcolumn unequalcolumnright">
+                        <a href="#toolHandTractor">
+                            <h1>Hand Tractor</h1>
+                        </a>
+                        <p>Hand tractor is used to pull a plow and harrow in preparing a large area of land..</p>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="aboutWaterPumps">
+                <div class="row">
+                    <div class="unequalcolumn unequalcolumnleft">
+                        <img src="img/protosample/learntools/2WaterPumps.png" alt="test" class="logo"></img>
+                    </div>
+                    <div class="unequalcolumn unequalcolumnright">
+                        <a href="#toolWaterPumps">
+                            <h1>WaterPumps</h1>
+                        </a>
+                        <p>Water pumps are used to draw irrigation water from a source..</p>
+                    </div>
+                </div>
+            </div>
+            <hr>
         </section>
     </main>
     <footer id="footer">
