--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 <!--/*  makecrops.github.io
 
-        Home Page
+        Learn Page
 
         Project in TLE, Computer and Statistics
 
@@ -40,7 +40,7 @@
 
 
     <!-- Title -->
-    <title>Home | Make Crops</title>
+    <title>Learn | Make Crops</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/protosample/ico/favicon.png" />
@@ -51,7 +51,7 @@
     <link rel="stylesheet" href="css/nav.css" />
     <link rel="stylesheet" href="css/sidebar.css" />
     <link rel="stylesheet" href="css/returnTop.css" />
-    <link rel="stylesheet" href="css/home.css" />
+    <link rel="stylesheet" href="css/about.css" />
     <link rel="stylesheet" href="css/footer.css" />
 
 
@@ -74,8 +74,8 @@
         <h1>Navigator</h1>
         <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeSideNav()">&times;</a> -->
         <a href="#intro">Intro</a>
-        <a href="#details">Details</a>
-        <a href="#progress">Progress</a>
+        <a href="#aboutUs">Our Work</a>
+        <a href="#ourSquad">Our Squad</a>
         <a href="#footer">Footer</a>
     </div>
 
@@ -118,39 +118,60 @@
 
     <main id="main">
         <section class="section1 intro" id="intro">
-            <h1>Make Crops</h1>
+            <h1>About Us</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </section>
-        <section class="section2 details" id="details">
-            <div class="row">
-                <div class="threecolumn">
-                    <img src="img/protosample/assets/PlantIcon.png" alt="Plants" class="logo"></img>
-                    <h1>Plants</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </div>
-                <div class="threecolumn">
-                    <img src="img/protosample/assets/LearnIcon.png" alt="Learn" class=""></img>
-                    <h1>Learn</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </div>
-                <div class="threecolumn">
-                    <img src="img/protosample/assets/AboutIcon.png" alt="About" class=""></img>
-                    <h1>About</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </div>
-            </div>
+        <section class="section2 aboutUs" id="aboutUs">
+            <a href="#aboutUs">
+                <h1>Our Work</h1>
+            </a>
+            <hr>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </section>
-        <section class="section3 progress" id="progress">
-            <div class="row">
-                <div class="bicolumn">
-                    <h1>Our Project</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <section class="section3 ourSquad" id="ourSquad">
+            <a href="#ourSquad">
+                <h1>Meet our Squad</h1>
+            </a>
+            <hr>
+            <div class="squadCardsContainer">
+                <div class="squadCard obscure">
+                    <img src="img/protosample/favicon.png">
+                    <div class="squadCardDesc">
+                        <h3>Ganbaru-kun</h3>
+                        <p>SysAdmin at Imagimation</p>
+                    </div>
                 </div>
-                <div class="bicolumn">
-                    <img src="img/protosample/favicon.png" alt="test" class="logo"></img>
+                <div class="squadCard">
+                    <img src="img/protosample/favicon.png">
+                    <div class="squadCardDesc">
+                        <h3>Ganbaru-kun</h3>
+                        <p>SysAdmin at Imagimation</p>
+                    </div>
+                </div>
+                <div class="squadCard">
+                    <img src="img/protosample/favicon.png">
+                    <div class="squadCardDesc">
+                        <h3>Ganbaru-kun</h3>
+                        <p>SysAdmin at Imagimation</p>
+                    </div>
                 </div>
             </div>
-
+            <div class="squadCardsContainer">
+                <div class="squadCard">
+                    <img src="img/protosample/favicon.png">
+                    <div class="squadCardDesc">
+                        <h3>Ganbaru-kun</h3>
+                        <p>SysAdmin at Imagimation</p>
+                    </div>
+                </div>
+                <div class="squadCard">
+                    <img src="img/protosample/favicon.png">
+                    <div class="squadCardDesc">
+                        <h3>Ganbaru-kun</h3>
+                        <p>SysAdmin at Imagimation</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 
@@ -195,6 +216,7 @@
             </div>
         </div>
     </footer>
+
 
     <!-- Top Button -->
 
