--- a/plants.html
+++ b/plants.html
@@ -43,7 +43,7 @@
     <title>Plants | Make Crops</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/protosample/assets/PlantIcon.png" />
+    <link rel="icon" href="img/protosample/ico/favicon.png" />
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css" />
@@ -134,21 +134,46 @@
             </a>
             <hr>
             <div class="plantContent">
+                <div class="plantTitle">
+                    <h2>Week 1</h2>
+                </div>
+                <br>
                 <div class="plantBox">
                     <div class="row plantRow">
-                        <div class="unequalcolumn unequalcolumnleft">
+                        <div class="unequalcolumn xxvcolumnleft">
                             <div class="plantColumnStyle">
                                 <div class="plantImg">
-                                    <img src="img/protosample/assets/ProfilePic.png" class="logo"></img>
+                                    <img src="img/protosample/assets/plants/1.jpg">
+                                    <img src="img/protosample/assets/plants/1.jpg">
+                                    <img src="img/protosample/assets/plants/1.jpg">
                                 </div>
                                 <div class="plantTxT">
-                                    <h3>Lorem ipsum</h3>
+                                    <h3>Plants</h3>
                                 </div>
                             </div>
                         </div>
-                        <div class="unequalcolumn unequalcolumnright">
+                        <div class="unequalcolumn lxxvcolumnright">
                             <div class="plantColumnStyle">
-
+                                <div class="plantDesc">
+                                    <h2>Description</h2>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                                </div>
+                                <div class="plantInfo">
+                                    <div class="row">
+                                        <div class="threecolumn plantInfoBox">
+                                            <h2>Plant height</h2>
+                                            <p>25 Centimetre</p>
+                                        </div>
+                                        <div class="threecolumn plantInfoBox">
+                                            <h2>Plant height</h2>
+                                            <p>25 Centimetre</p>
+                                        </div>
+                                        <div class="threecolumn plantInfoBox">
+                                            <h2>Plant height</h2>
+                                            <p>25 Centimetre</p>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -156,6 +181,7 @@
             </div>
         </section>
     </main>
+    
     <footer id="footer">
         <div class="row">
             <div class="threecolumn footerColumnDivider">
@@ -165,15 +191,14 @@
                             src="img/btn/social_media/GitHub-Mark/PNG/GitHub-Mark-Light-120px-plus.png"
                             alt="Make Crops Github Page"></a>
                     <a href="https://github.com/makecrops/makecrops.github.io"><img
-                            src="img/btn/social_media/makecrops.png"
-                            alt="makecrops.github.io Github repository"></a>
+                            src="img/btn/social_media/makecrops.png" alt="makecrops.github.io Github repository"></a>
                     <a href="https://github.com/lordgumball20"><img src="img/btn/social_media/lordgumball20.png"
                             alt="LordGumball's Github Profile"></a>
                 </div>
                 <hr class="dashed">
                 <div class="footerLinks">
                     <h3>Links</h3>
-                    <hr>
+                    <br>
                     <a href="index.html">Home</a> |
                     <a href="plants.html">Plants</a> |
                     <a href="learn.html">Learn</a> |
@@ -184,10 +209,11 @@
 
             </div>
             <div class="threecolumn">
-                <img src="img/protosample/assets/PlantIcon.png" style="filter: invert(1);">
+                <!-- <img src="img/protosample/assets/PlantIcon.png" style="filter: invert(1);">
                 <h1>Make Crops</h1>
-                <h4>2020 © Make Crops Co.</h4>
-                <hr>
+                <h4>2020 © Make Crops Co.</h4> -->
+                <img src="img/protosample/ico/logotype.png" style="width: 50%;">
+                <hr class="dashed">
                 <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img
                         alt="Creative Commons License" style="border-width:0"
                         src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />Make Crops template by
@@ -197,7 +223,6 @@
             </div>
         </div>
     </footer>
-
 
     <!-- Top Button -->
 
