--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <title>Home | Make Crops</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/protosample/assets/PlantIcon.png" />
+    <link rel="icon" href="img/protosample/icon.png" />
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css" />
@@ -119,35 +119,36 @@
     <main id="main">
         <section class="section1 intro" id="intro">
             <h1>Make Crops</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </section>
         <section class="section2 details" id="details">
             <div class="row">
                 <div class="threecolumn">
+                    <a href="plants.html" class="detailsButton">
                     <img src="img/protosample/assets/PlantIcon.png" alt="Plants" class="logo"></img>
                     <h1>Plants</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </a>
                 </div>
                 <div class="threecolumn">
+                    <a href="learn.html" class="detailsButton">
                     <img src="img/protosample/assets/LearnIcon.png" alt="Learn" class=""></img>
                     <h1>Learn</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </a>
                 </div>
                 <div class="threecolumn">
+                    <a href="about.html" class="detailsButton">
                     <img src="img/protosample/assets/AboutIcon.png" alt="About" class=""></img>
                     <h1>About</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </a>
                 </div>
             </div>
         </section>
         <section class="section3 progress" id="progress">
             <div class="row">
-                <div class="bicolumn">
-                    <h1>Our Project</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div>
+                    <img src="img/protosample/icon.png" alt="test" class="logo"></img>
+                    <h1>The ultimate goal of farming is not the growing of crops, but the cultivation and perfection of human beings.</h1>
                 </div>
-                <div class="bicolumn">
-                    <img src="img/protosample/favicon.png" alt="test" class="logo"></img>
+                <div>
                 </div>
             </div>
 
@@ -158,12 +159,12 @@
             <div class="threecolumn footerColumnDivider">
                 <div class="socialLinks">
                     <h3>Find us on</h3>
-                    <a href="https://github.com/makecrops"><img
+                    <a href="https://github.com/makecrops" target="_blank"><img
                             src="img/btn/social_media/GitHub-Mark/PNG/GitHub-Mark-Light-120px-plus.png"
                             alt="Make Crops Github Page"></a>
-                    <a href="https://github.com/makecrops/makecrops.github.io"><img
+                    <a href="https://github.com/makecrops/makecrops.github.io" target="_blank"><img
                             src="img/btn/social_media/makecrops.png" alt="makecrops.github.io Github repository"></a>
-                    <a href="https://github.com/lordgumball20"><img src="img/btn/social_media/lordgumball20.png"
+                    <a href="https://github.com/lordgumball20" target="_blank"><img src="img/btn/social_media/lordgumball20.png"
                             alt="LordGumball's Github Profile"></a>
                 </div>
                 <hr class="dashed">
@@ -180,15 +181,15 @@
 
             </div>
             <div class="threecolumn">
-                <img src="img/protosample/assets/PlantIcon.png" style="filter: invert(1);">
-                <h1>Make Crops</h1>
+                <img src="img/protosample/Logo2.png" id="footerLogo">
+                <!--<h1>Make Crops</h1>-->
                 <h4>2020 © Make Crops Co.</h4>
                 <hr>
-                <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img
+                <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank"><img
                         alt="Creative Commons License" style="border-width:0"
                         src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />Make Crops template by
                 LordGumball20 is licensed
-                under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons
+                under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative Commons
                     Attribution-ShareAlike 4.0 International License</a>.
             </div>
         </div>
