--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <div class="row">
                 <div>
                     <img src="img/protosample/icon.png" alt="test" class="logo"></img>
-                    <h1>The ultimate goal of farming is not the growing of crops, but the cultivation and perfection of human beings.</h1>
+                    <h1>"The ultimate goal of farming is not the growing of crops, but the cultivation and perfection of human beings."</h1>
                 </div>
                 <div>
                 </div>
